<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:weightSum="10">

            <Button
                android:id="@+id/btn_signIn"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="5"
                android:gravity="center"
                android:text="@string/sign_in_text" />

            <Button
                android:id="@+id/btn_signOut"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="5"
                android:enabled="false"
                android:gravity="center"
                android:text="@string/sign_out_text" />
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_callGraph"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="5"
                android:enabled="false"
                android:text="@string/get_graph_data_text" />
        </LinearLayout>


        <TextView
            android:layout_width="match_parent"
            android:layout_height="30dp"
            tools:layout_marginTop="30dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:text="@string/graph_output_header"
            tools:layout_marginTop="30dp" />

        <TextView
            android:id="@+id/txt_log"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="10dp"
            android:layout_weight="0.8"
            android:background="#FFFFDD" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="30dp"
            tools:layout_marginTop="30dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:text="@string/token_expiration_header"
            tools:layout_marginTop="30dp" />

        <TextView
            android:id="@+id/token_expiration"
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:layout_marginTop="10dp"
            android:background="#FFFFDD" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="30dp"
            tools:layout_marginTop="30dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/token_message" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="30dp"
            tools:layout_marginTop="30dp" />

    </LinearLayout>

</FrameLayout>
